# ai-productivity-stack

./: .gitignore  MIGRATION_CHECKLIST.md  Makefile  QA_CHECKLIST.md  README.md  REFACTOR_PREP.md  architecture.mermaid  notion-sync.skill  run.sh
backend/: .env  .env.example  README.md  alembic.ini  module_09.db  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tasks.py  0002_add_task_fields_and_notifications.py  0003_create_blackboard_tasks.py  0004_add_chat_tables_tool_runs.py  0005_add_brain_decisions.py  0006_add_llm_registry_and_policy.py  ccc98ef052fd_add_notion_tasks_table.py
backend/app/: main.py
backend/app/core/: llm.py  (+6 more)
backend/prompts/: mage_system.txt
blueprints/: ARCHITECTURE-SUMMARY.md  MODULE_09_ARCHITECTURE.md  MODULE_09_UI_AUDIT.md  daily-brief.html  mission-control.html  sprint-dashboard.jsx
docs/: agent-roles.md  autonomous-company-architecture.md  backbrief-handoff-2026-02-12.md  claude-ui-parity-map.md  data-flow.md  future-plan.md
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  chat.ts  health.ts  news.ts  ops-next.ts  ops.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
handoffs/: CODEX_HANDOFF_2026-02-13.md  notion-integration-spec.md
module_09.xcworkspace/: contents.xcworkspacedata
outlook-mcp/: pyproject.toml
outlook-mcp/outlook_mcp/: __init__.py  auth.py  graph_client.py  models.py  server.py
shell/: dev-all.sh  dev-backend.sh  dev-frontend.sh  dev-one.sh  healthcheck.sh  qa.sh  status.sh  verify.sh
(+47 files in other folders)
