[project]
name = "outlook-mcp"
version = "0.1.0"
description = "Outlook email MCP server for Cowork mode — Microsoft Graph API integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
